# wenova

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  INSTALL.md  Makefile  README.md  Vagrantfile
deb_package_32/DEBIAN/: control
deb_package_64/DEBIAN/: changelog  control  copyright
debian_packages/: wenova_0.4.1_amd64.deb  wenova_0.4.1_i386.deb
include/: Animation.h  Attack.h  BattleEnd.h  BattleState.h  Blood.h  Camera.h  CharacterSelectState.h  Collision.h  Config.h  EditState.h  EditableFloor.h  Effect.h  Face.h  Fighter.h  FighterMenu.h  FighterStats.h  Flesh.h  FleshUltimateEffect.h  Floor.h  Game.h  GameObject.h  HealEffect.h  InputManager.h  JoystickButton.h  JoystickConfigState.h  MenuState.h  Music.h  OptionsState.h  Rectangle.h  Resources.h  Skill.h  Sound.h  Sprite.h  StageSelectState.h  State.h  StateData.h  Text.h  TimeCounter.h  Timer.h  TitleState.h  (+2 more)
res/font/: 8-BIT WONDER.TXT
res/joysticks/: gamecontrollerdb.txt  joystick_1
res/stage_1/: level_design.dat.old  level_design.txt
res/stage_2/: level_design.dat.old
src/: Animation.cpp  Attack.cpp  BattleEnd.cpp  BattleState.cpp  Blood.cpp  Camera.cpp  CharacterSelectState.cpp  Config.cpp  EditState.cpp  EditableFloor.cpp  Effect.cpp  Fighter.cpp  FighterMenu.cpp  FighterStats.cpp  Flesh.cpp  FleshUltimateEffect.cpp  Floor.cpp  Game.cpp  HealEffect.cpp  InputManager.cpp  JoystickButton.cpp  JoystickConfigState.cpp  Main.cpp  MenuState.cpp  Music.cpp  OptionsState.cpp  Rectangle.cpp  Resources.cpp  Sound.cpp  Sprite.cpp  StageSelectStage.cpp  State.cpp  Text.cpp  TimeCounter.cpp  Timer.cpp  TitleState.cpp  UltimateEffect.cpp  Vector.cpp
