cmake_minimum_required(VERSION 3.0.2)
project(wenova LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set (INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
set (SRC_DIR     "${PROJECT_SOURCE_DIR}/src")
set (ASSETS_DIR  "${PROJECT_SOURCE_DIR}/res")

file(GLOB_RECURSE SOURCES "${SRC_DIR}/*.cpp")

include_directories("${INCLUDE_DIR}")

# The CMAKE_DL_LIBS is to prevent C++11 errors

add_executable(wenova ${SOURCES})
set_property(TARGET wenova PROPERTY CXX_STANDARD 11)
target_link_libraries(wenova
                        SDL2 SDL2_image SDL2_ttf SDL2_mixer
                        ${CMAKE_DL_LIBS})

add_custom_command(TARGET wenova COMMAND ${CMAKE_COMMAND} -E copy wenova ${PROJECT_SOURCE_DIR})

# install(TARGETS traveling-will DESTINATION "/bin")
#
# install(DIRECTORY res DESTINATION "/opt/traveling-will" DIRECTORY_PERMISSIONS
#         OWNER_WRITE OWNER_READ OWNER_EXECUTE
#         GROUP_WRITE GROUP_READ GROUP_EXECUTE
#         WORLD_WRITE WORLD_READ WORLD_EXECUTE
#         FILE_PERMISSIONS
#         OWNER_WRITE OWNER_READ OWNER_EXECUTE
#         GROUP_WRITE GROUP_READ GROUP_EXECUTE
#         WORLD_WRITE WORLD_READ WORLD_EXECUTE
# )
#
# install(DIRECTORY libs DESTINATION "/opt/traveling-will" DIRECTORY_PERMISSIONS
#         OWNER_WRITE OWNER_READ OWNER_EXECUTE
#         GROUP_WRITE GROUP_READ GROUP_EXECUTE
#         WORLD_WRITE WORLD_READ WORLD_EXECUTE
#         FILE_PERMISSIONS
#         OWNER_WRITE OWNER_READ OWNER_EXECUTE
#         GROUP_WRITE GROUP_READ GROUP_EXECUTE
#         WORLD_WRITE WORLD_READ WORLD_EXECUTE
# )
